--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,66 @@
 */ Reset default browser styles */
-body{line-height:1.6;background-color:pink;}
-header {background-color: blanchedalmond;text-decoration-color: blue;text-align: center;text-decoration-style: solid;font-weight: bold;}
-nav ul {list-style: none;}
-nav ul li {display:inline;margin-right: 27px;}
-title{background-color: blue;text-align: center;}
-.product, .services {text: size adjust 2em;text-decoration: wavy ;}
-.product img {max: width 100px;height: auto;size-adjust: width 3em;height: 4em;}
-footer {background-color: blanchedalmond;text-decoration: chocolate;text-align: center;}
-span {background-color: aqua;text-align: center;font-weight: bolder;}
+body{line-height:1.6;
+    background-color:rgb(23, 184, 95);
+}
+header {background-color: blanchedalmond;
+    font-family:sans-serif
+    text-decoration-color: blue;
+    text-align: center;
+    text-decoration-style: solid;
+    font-weight: bold;
+    padding-left:40px;
+    padding-right:40px; 
+}
+h1{text-align: center;
+}
+nav ul {list-style: none;
+}
+nav ul li {display:inline;
+    background-color:black ;
+    }
+a:hover{color: chartreuse;
+}  
+a:active{color: blue;
+}
+title{background-color: rgb(255, 0, 85);
+    text-align: center;
+}
+.product, .services {text: size adjust 2em;
+    text-decoration: wavy ;
+    padding: 40px;
+}
+.item:active{color:rgb(10, 245, 81) ;
+}
+.item:hover{color: limegreen;
+}
+.product img {max: width 100px;
+    height: auto;
+    size-adjust: width 3em;
+    height: 4em;
+    padding: 40px;
+}
+    hr{height: 5px;
+         background-color:black;
+        border-color: blue;
+    }
+footer {background-color: rgb(255, 248, 205);
+    text-decoration: chocolate;
+    text-align: center;}
+span {;
+    text-align: center;
+    font-weight: bolder
+    ;text-decoration-color: blue;
+}
+table{width: 80%;
+    background-color: antiquewhite;
+border-collapse: collapse;
+}
+table, th, td {
+    border: 2px ridge rgb(22, 21, 21);
+    text-align: center;
+}
+td{text-align: center;
+    color: rgb(24, 83, 192);
+}
+.contact{background-color: #1c056d;
+}
